--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "nodemon": "^2.0.13",
     "supertest": "^6.1.6"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "jest": {
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": [
